feat: Se realizó la tarea de la semana 1

--- a/semana_01_introduccion_python/codigo/TorresGuevaraJuanManuel_S1CASA_IntroPython.ipynb
+++ b/semana_01_introduccion_python/codigo/TorresGuevaraJuanManuel_S1CASA_IntroPython.ipynb
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -738,7 +738,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "ejercicio 1\n"
+            "ejercicio 1\n",
+            "la primera tiene un valor de 29 y la segunda variable tiene un valor de 3.0\n",
+            "El resultado es 0.10344827586206896\n",
+            "[101, 26, 'rio', 'gato', 17, 45, 28]\n",
+            "101\n",
+            "26\n",
+            "rio\n",
+            "gato\n",
+            "17\n",
+            "45\n",
+            "28\n",
+            "257\n",
+            "285\n",
+            "583\n",
+            "gato\n",
+            "la longitud de la lista es 10\n"
           ]
         }
       ],
@@ -749,30 +764,46 @@
         "\n",
         "#a) Inicializar dos variables globales (con valores escogidos por ustedes), una entera y otra flotante.\\\\\n",
         "\n",
+        "a=29\n",
+        "b=3.0\n",
         "\n",
         "#b) Imprimir los valores de las variables en un mensaje: #\n",
         "#\"la primera tiene un valor de XX y la segunda variable tiene un valor de YY\"\n",
         "\n",
-        "\n",
+        "print(f\"la primera tiene un valor de {a} y la segunda variable tiene un valor de {b}\")\n",
         "\n",
         "#c) Calcular el valor de la segunda variable dividida por la primera e imprimir : \"El resultado es ZZ\"\n",
         "\n",
+        "z=b/a\n",
         "\n",
+        "print(f\"El resultado es {z}\")\n",
         "\n",
         "#d) Crear una lista con los elementos: 101, 26, rio, gato, 17, 45 y 28 e imprimirla.\n",
         "\n",
+        "lista=[101, 26, 'rio', 'gato', 17, 45, 28]\n",
+        "\n",
+        "print(lista)\n",
         "\n",
         "#e) Agregarle a esa lista los elementos: 257, 285, 583\n",
         "\n",
+        "lista.append(257)\n",
+        "lista.append(285)\n",
+        "lista.append(583)\n",
         "\n",
         "#f) Hacer un ciclo para recorrer dicha lista e imprimir sus elementos.\n",
         "\n",
+        "for elemento_en_lista in lista:\n",
+        "  print(elemento_en_lista)\n",
         "\n",
         "#g) imprimir el cuarto elemento de la lista.\n",
         "\n",
+        "print(lista[3])\n",
         "\n",
         "#h) Calcular la longitud de la lista e imprimir: \"la longitud de la lista es XX\" puede usar le función len()\n",
-        "\n"
+        "\n",
+        "longitud_lista=len(lista)\n",
+        "\n",
+        "print(f\"la longitud de la lista es {longitud_lista}\")\n"
       ]
     },
     {
@@ -786,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -799,12 +830,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "arreglo x: [291 112 830 230  36 470 162 523 496 835 359 738 703 255 819 813 606   5\n",
-            " 855 784 711 532 357 534   7 701  12 271 894 396 420  27 230 814 643 337\n",
-            " 354 778 470 261 353 849 367 421 419 577 333 143 186 210 856 871 590 708\n",
-            " 854 746  93 438 771 376 539 425 383  48 549 640 711 887 430 495  36 816\n",
-            " 134 360 718 580 294 239  74  12 641 319  75  53 632 778 103 695 644 537\n",
-            "  48 541 816 127  25 425 258 345 708 268]\n"
+            "arreglo x: [426 489 713 896 368 532 362 471 127 186 590 576 590 238 498 569 810  87\n",
+            "  80 847 751  32 490 525 173  84 163 321 439 722 852 736 891 423 488 864\n",
+            " 170 898 346 116 320 663 797 831 892 313 721 488 802 886 707  11 247 365\n",
+            " 118 299 263 521 558 587 138 346 540  59  47 612 290 834 783 498 164 298\n",
+            " 330 736  46 856 487 442 458 832 338 188 854 756 423 436 862 279 877 620\n",
+            " 363 297 749  13 212 372 718 838 458 808]\n",
+            "489\n",
+            "713\n"
           ]
         }
       ],
@@ -820,6 +853,11 @@
         "x=np.int_(np.random.random(100)*900)\n",
         "print(f\"arreglo x: {x}\")\n",
         "\n",
+        "for i in x:\n",
+        "    if(i%2 != 0):\n",
+        "        print(i)\n",
+        "    if(i > 700):\n",
+        "        break\n",
         "\n"
       ]
     },
@@ -834,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -849,6 +887,16 @@
           "text": [
             "ejercicio 3\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "180"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -858,6 +906,13 @@
         "#Haga una función llamada multiplicación\n",
         "#que reciba como argumentos dos variables a y b y retorne a*b.\n",
         "#Imprima lo que retorna la función para a=10 y b=18\n",
+        "\n",
+        "def multiplicacion(a,b):\n",
+        "    return a*b\n",
+        "\n",
+        "a=10\n",
+        "b=18\n",
+        "multiplicacion(a,b)\n",
         "\n"
       ]
     },
@@ -872,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -885,7 +940,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "ejercicio 4\n"
+            "ejercicio 4\n",
+            "El valor mínimo de la lista x debería ser 11, y según la función np.min, es 11\n",
+            "¡El código funcionó!, 11 = 11\n"
           ]
         }
       ],
@@ -895,7 +952,16 @@
         "# Complete el siguiente código para que:\n",
         "# recorra la lista x del ejercicio 2 y encuentre el mínimo de los elementos de la lista.\n",
         "#Compare su resultado con el obtenido por np.min e imprima un mensajito con ambos valores.\n",
-        "\n"
+        "\n",
+        "min=999\n",
+        "epsilon = 1e-10\n",
+        "\n",
+        "for i in x:\n",
+        "    if (i < min):\n",
+        "        min = i\n",
+        "\n",
+        "print(f\"El valor mínimo de la lista x debería ser {min}, y según la función np.min, es {np.min(x)}\")\n",
+        "print(f\"¡El código funcionó!, {min} = {np.min(x)}\" if np.abs(min - np.min(x)) < epsilon else \"El código no funcionó\")"
       ]
     },
     {
@@ -909,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -923,12 +989,12 @@
           "output_type": "stream",
           "text": [
             "ejercicio 5\n",
-            "arreglo x:  [291 702 280 879 317  75  33  31 423 493 626 212  82   5 529 818 303 104\n",
-            " 317  80 118 508 114 519 149   9 825 854 199 465 359  82 630 833 129 736\n",
-            " 612 766 113 458 659 352 532 257  20 338 342 750  96 252 446  36 437 863\n",
-            " 674 476 323 850 586 520 177 310 232 214 564 266 882 293 557  33 636 214\n",
-            " 393 879 627 756 138 529 318 702 652  69 318 274 490 616  13 207 115 534\n",
-            " 874 555 780 433 521  45 110 807 360  71]\n"
+            "arreglo x:  [  2 302 334  56 157 659 814 445   6 572 848 689 116 771  55 568  22 660\n",
+            "  11 895 165 891 873 224 171 527 639   9  25 123 873 181 199 452 857 368\n",
+            " 576 567 183 113 829 114 518  89 100 332 206 283  95 177 704 296  85 157\n",
+            "  48 282  26 135 765 487 698 234 810 640 718 659 530 475 217 545 223  53\n",
+            " 410 497 319 164  43 182 289 359 582 881 216 658 817 118 848 765 335 522\n",
+            " 609 482 669 379  85  39 735 714 241 544]\n"
           ]
         }
       ],
@@ -940,17 +1006,33 @@
         "\n",
         "#genero un arreglo de número aleatorios:\n",
         "x=np.int_(np.random.random(100)*900)\n",
-        "print(\"arreglo x: \", x)\n"
+        "print(\"arreglo x: \", x)\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "hkPMFa3mwHQ9"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Los primeros diez números del arreglo x son: [  2 302 334  56 157 659 814 445   6 572]\n",
+            "Los últimos diez números del arreglo x son: [609 482 669 379  85  39 735 714 241 544]\n",
+            "La suma resulta en el siguiente arreglo: [ 611  784 1003  435  242  698 1549 1159  247 1116]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"Los primeros diez números del arreglo x son: {x[0:10]}\")\n",
+        "print(f\"Los últimos diez números del arreglo x son: {x[90:100]}\")\n",
+        "print(f\"La suma resulta en el siguiente arreglo: {x[0:10]+x[90:100]}\")"
+      ]
     }
   ],
   "metadata": {
@@ -958,11 +1040,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv (3.12.11)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.11"
     }
   },
   "nbformat": 4,
