feat: adelantando tarea para el lunes en la noche

--- a/semana_02_Integracion_y_Derivacion_python/codigo/TorresGuevaraJuanManuel_S2C1_integracion_numerica.ipynb
+++ b/semana_02_Integracion_y_Derivacion_python/codigo/TorresGuevaraJuanManuel_S2C1_integracion_numerica.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "id": "lQpqA4JRniy5"
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "id": "aSfvBxOQpoFs"
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "fIBHvm7guBgT"
    },
@@ -76,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7553389ea4b0>]"
+       "[<matplotlib.lines.Line2D at 0x7db299648ef0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "id": "ad7jU8CUpulg"
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "id": "CHZUcV-Fpwdq"
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "id": "lmm6oEfop8_w"
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -286,63 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "id": "S2JNkd2R1fvf"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[913.62680946 338.38123643 543.02438273 116.47851182 639.48579267\n",
-      "   499.90640504 534.77253081 876.89056483 665.79967663 634.76547317\n",
-      "    14.37496195 855.79807958 806.73248472 681.76636391 938.9186282\n",
-      "   704.67660745 396.20933171 517.76865036 884.21772876 119.43392715\n",
-      "   109.87479456 375.2969653  773.65111502 833.76326087 363.21136507\n",
-      "   876.19881849 858.27043357 273.27734182 422.95675037 651.74217989\n",
-      "    55.90917634  39.0765164  211.1007164  681.61622967 932.66709267\n",
-      "    46.42983914 335.92045287  37.93662452 979.26680771 285.64397993\n",
-      "   145.69850223 263.50673455 420.48132271 882.27848891 435.60651727\n",
-      "   109.60284034 654.21546842 687.94949557 911.86881928 758.55130902\n",
-      "   664.7627516  143.95146813 275.93101505   7.71324718 803.50746986\n",
-      "   828.66497148  59.72364383 375.85230138 979.30807365 219.69756845\n",
-      "   412.92060575 716.08626818 153.41363821 633.99178647 948.64400406\n",
-      "   456.86021678  61.85730738 531.78298987 233.82710443 714.26742317\n",
-      "   596.95954717 910.75017379 201.22360404 804.34043658 881.72550699\n",
-      "   630.67205326 774.04911214 486.51569117 176.41375568 474.26121639\n",
-      "   922.53895269 708.50165067 120.45000706 178.86603055  41.30864585\n",
-      "   218.26019057 805.96055506 409.43589352 390.95744295 680.32842184\n",
-      "   605.13123883 685.19195398 105.66696774 761.84700386 631.130655\n",
-      "   398.66563735 739.6208204  398.93077232 883.78394841 996.65880642]]\n",
-      "\n",
-      " [[736.53553057 820.09850492 441.7186101  709.71857847 784.34722146\n",
-      "   388.70715767 665.44002204 832.77574507 114.20877095 256.38717712\n",
-      "   129.41755531 791.15757471 443.29063898 695.87305173 515.3405247\n",
-      "   625.15615774 915.9297117  471.39027356 425.9053718  480.16521831\n",
-      "   150.90685581 266.27867105 195.14957313 841.26872613 137.3088638\n",
-      "    21.71460828 167.12369911 245.0059445  195.24862672 662.44318581\n",
-      "   137.7982494  341.87612537 555.63345779 395.09545389 784.86763184\n",
-      "   435.48535817 330.43526028 675.70883861 655.68520076 523.85807905\n",
-      "   320.70170097 199.92229797  63.16514098 244.03938933 417.40537886\n",
-      "   221.56909274  74.85116964 851.83528075 199.26364886 874.27578114\n",
-      "   494.63015056 267.97781168 342.21569089 660.66815361 493.56508854\n",
-      "   626.96048129 405.08667897 645.26391406 480.15441448 984.1516618\n",
-      "   761.35958756 812.33142979 965.60269994 990.35093301 208.65838259\n",
-      "   380.66818071 694.75969485 248.38830995 193.25435554 941.92795785\n",
-      "   303.2370628  969.78226114 482.86236303  16.93940928  67.28449917\n",
-      "   326.38206059 654.74967545 659.65366311  34.19138269 776.43811831\n",
-      "    48.16350946 278.48087707 474.64326072 902.66403532 966.30154652\n",
-      "   476.14790187 181.99184675 460.73987858 508.9023373  843.69755885\n",
-      "   343.13052824 696.20785468 556.81504689 676.7328399  229.37722997\n",
-      "   382.35210557 776.53651695 210.01900993  68.76287207 441.81352656]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Método Monte Carlo\n",
-    "aleatorio = np.array([[np.random.random(100)*999],[np.random.random(100)*999]])\n",
-    "print(aleatorio)"
+    "x_aleatorio = np.array([np.random.random(100)*999])\n",
+    "\n",
+    "fx_aleatorio = np.array([np.random.random(100)*999])\n"
    ]
   },
   {
@@ -358,7 +311,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv (3.12.11)",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
