feat: Se ha trabajado en la tarea de la semana 3

--- a/semana_03_sistemas_de_ecuaciones_lineales/codigo/TorresGuevaraJuanManuel_S3C2_PCA.ipynb
+++ b/semana_03_sistemas_de_ecuaciones_lineales/codigo/TorresGuevaraJuanManuel_S3C2_PCA.ipynb
@@ -31,8 +31,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$Cov_{u,v} = Cov_{v,u} = \\frac{\\sum_{i=1}^n (u_i-\\bar{u})(v_i-\\bar{v})}{n-1}$$\n",
+    "$$Var_u = \\frac{\\sum_{i=1}^n (u_i-\\bar{u})^2}{n-1}$$\n",
+    "$$Var_v = \\frac{\\sum_{i=1}^n (v_i-\\bar{v})^2}{n-1}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "P-ESoV5Zhrfe"
    },
@@ -42,20 +51,27 @@
      "output_type": "stream",
      "text": [
       "Covarianza 'a mano': -363.6375\n",
-      "Covarianza Numpy: [[ 958.19444444 -363.6375    ]\n",
+      "Var_u = 958.1944444444443\n",
+      "El valor de covarianza negativo (-363.6375) indica que existe una correlación inversa entre las series u y v.\n",
+      "\tEsto significa que, en general, cuando los valores de u aumentan, los valores de v tienden a disminuir, y viceversa.\n",
+      "\tEsta relación se puede observar visualmente en la gráfica.\n",
+      "\n",
+      "Matriz de covarianza 'a mano':\n",
+      "\n",
+      "[[ 958.19444444 -363.6375    ]\n",
       " [-363.6375      235.085     ]]\n",
-      "958.1944444444443\n"
+      "\n",
+      "Matriz de covarianza por numpy:\n",
+      "\n",
+      "[[ 958.19444444 -363.6375    ]\n",
+      " [-363.6375      235.085     ]]\n",
+      "\n",
+      "Error relativo:\n",
+      "\n",
+      "[[1.e-13 0.e+00]\n",
+      " [0.e+00 0.e+00]]\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -88,12 +104,20 @@
     "\n",
     "# 3)\n",
     "var_u = np.sum((u - u.mean())**2)/(np.size(u)-1)\n",
-    "print(var_u)\n",
+    "print(f\"Var_u = {var_u}\")\n",
     "\n",
     "# 4)\n",
-    "print\n",
+    "print(f\"El valor de covarianza negativo ({cov}) indica que existe una correlación inversa entre las series u y v.\"\n",
+    "      + \"\\n\\tEsto significa que, en general, cuando los valores de u aumentan, los valores de v tienden a disminuir, y viceversa.\"\n",
+    "      + \"\\n\\tEsta relación se puede observar visualmente en la gráfica.\")\n",
     "\n",
-    "# 5) Construya un código para obtener la matriz de covarianza de los datos anteriores. (compare su resultado con el de numpy.cov)\n"
+    "# 5) Construya un código para obtener la matriz de covarianza de los datos anteriores. (compare su resultado con el de numpy.cov)\n",
+    "var_v = np.sum((v - v.mean())**2)/(np.size(v)-1)\n",
+    "matriz_cov = np.array([[var_u,cov],[cov,var_v]])\n",
+    "print(f\"\\nMatriz de covarianza 'a mano':\\n\\n{matriz_cov}\\n\")\n",
+    "\n",
+    "print(f\"Matriz de covarianza por numpy:\\n\\n{np.cov(u,v)}\\n\")\n",
+    "print(f\"Error relativo:\\n\\n{np.round(np.abs(matriz_cov-np.cov(u,v)),13)}\\n\")\n"
    ]
   },
   {
@@ -107,15 +131,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "RvqTyCLWmzmY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.70448669 2.4044663  1.45784091 1.64101544]\n",
+      " [2.4044663  2.94163122 1.60030594 1.80590181]\n",
+      " [1.45784091 1.60030594 2.52082168 2.31242133]\n",
+      " [1.64101544 1.80590181 2.31242133 2.71436626]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 6) Repita lo anterior para obtener la matriz de covarianza de los datos del archivo: room-temperature.csv\n",
+    "import pandas as pd\n",
     "\n",
+    "datos_temp = pd.read_csv(\"room-temperature.csv\", index_col='Date')\n",
+    "\n",
+    "datos_numericos = datos_temp.values\n",
+    "tiempo = datos_temp.index\n",
+    "\n",
+    "matriz_cov_temp = np.cov(datos_numericos, rowvar=False)\n",
+    "print(matriz_cov_temp)\n",
     "# 6a) Grafique las 4 series de datos en una misma imagen y guarde dicha gráfica sin mostrarla en 'serieTemp.pdf'\n",
+    "\n",
+    "datos_temp.plot(figsize=(12, 6))\n",
+    "plt.xlabel(\"Fecha y hora\")\n",
+    "plt.ylabel(\"Temperatura (K)\")\n",
+    "plt.savefig(\"serieTemp.pdf\")\n",
+    "plt.close()\n",
+    "\n",
     "# 7) Calcule los autovalores y los autovectores de la matriz de covarianza de los datos de temperatura.\n",
     "#(use el paquete: https://numpy.org/doc/stable/reference/generated/numpy.linalg.eig.html)\n",
     "\n",
@@ -194,7 +244,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
