--- a/semana_03_sistemas_de_ecuaciones_lineales/codigo/TorresGuevaraJuanManuel_S3C2_PCA.ipynb
+++ b/semana_03_sistemas_de_ecuaciones_lineales/codigo/TorresGuevaraJuanManuel_S3C2_PCA.ipynb
@@ -244,7 +244,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv (3.12.3)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
